--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>projeto redes sociais</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="cell">
+            <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
+        </section>
+        <section id="sociais">
+
+        </section>
+    </main>
 </body>
 </html>
